<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ctn_inputLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_length"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inp_inputLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ctn_inputWidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_width"
        android:layout_below="@+id/ctn_inputLength"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inp_inputWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ctn_inputHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_height"
        android:layout_below="@+id/ctn_inputWidth"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inp_inputHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate"
        android:layout_marginTop="16dp"
        android:layout_below="@id/ctn_inputHeight"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/tv_formula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formula"
        android:layout_below="@+id/btn_calculate"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ctn_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/tv_formula"
        android:hint="@string/opt_result">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/opt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>